--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <button onClick="save()" class="bg-gray-700 p-3 hover:bg-gray-600 rounded-sm">Save</button>
         <button onClick="load()" class="bg-gray-700 p-3 hover:bg-gray-600 rounded-sm">Load</button>
     </div>
-    <textarea id="save_area" class="language-html m-2 w-[99vw] h-[85vh] focus:outline-none bg-gray-800 p-3 text-white rounded-sm" contenteditable></texarea>
+    <textarea id="save_area" class="language-html m-2 w-[99vw] h-[85vh] focus:outline-none bg-gray-800 p-3 text-white rounded-sm" contenteditable>
+        content here
+    </texarea>
 </body>
 </html>
